@@ -1,4 +1,4 @@
 #Abator build version info
-#Sat Nov 17 19:58:51 CST 2007
+#Tue Nov 20 23:15:11 CST 2007
 version=1.1.0
-buildNum=395
+buildNum=397
