@@ -1,0 +1,73 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ "http://www.w3c.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+  <title>The &lt;columnRenamingRule&gt; Element</title>
+  <link type="text/css" rel="stylesheet" href="../abator.css"/>
+</head>
+<body>
+<h1>The &lt;columnRenamingRule&gt; Element</h1>
+<p>The &lt;columnRenamingRule&gt; element is used to tell Abator to rename
+database columns before calulating the corresponding property
+name in an introspected table.  This is useful when all columns
+in a table have a common prefix that should be removed before
+calculating the property name.  For example, suppose a table
+contains the following columns:</p>
+ <ul>
+   <li>CUST_NAME</li>
+   <li>CUST_ADDRESS</li>
+   <li>CUST_CITY</li>
+   <li>CUST_STATE</li>
+ </ul>
+<p>It might be annoying to have the generated properties
+ all containing the CUST prefix.  The prefix can be removed by
+ specifying a renimg rule like this:</p>
+ 
+<p><code>&lt;columnRenamingRule searchString="^CUST_" replaceString="" /&gt;</code></p>
+
+<p>Note that, internally, Abator uses the 
+ <code>java.util.regex.Matcher.replaceAll</code> method
+ for this function.  See the documentation for that method
+ and class for examples of the regular expression language used in
+ Java.</p>
+
+<p>This element will be ignored if the "useActualColumnNames" property
+  is set to "true" on the corresponding &lt;table&gt; element.
+  Further, if a &lt;columnOverride&gt; element matches a column,
+  it will take precedence over this renaming rule.</p>
+  
+<p>This element is an optional child
+element of the <a href="table.html">&lt;table&gt;</a> element.</p>
+
+<h2>Required Attributes</h2>
+<table border="1" cellspacing="0" cellpadding="5">
+  <tr>
+    <th>Attribute</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <td>searchString</td>
+    <td>This is a regular expression that defines the substring to be replaced.</td>
+  </tr>
+</table>
+
+<h2>Optional Attributes</h2>
+<table border="1" cellspacing="0" cellpadding="5">
+  <tr>
+    <th>Attribute</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <td>replaceString</td>
+    <td>This is a string to be substituted for every occurance of the
+        search string.  If not specified, the empty string is used.</td>
+  </tr>
+</table>
+
+<h2>Child Elements</h2>
+<p>None</p>
+
+</body>
+</html>
