@@ -21,6 +21,7 @@
   &nbsp;&nbsp;<a href="configreference/abatorContext.html" target="mainFrame">&lt;abatorContext&gt;</a><br/>
   &nbsp;&nbsp;<a href="configreference/classPathEntry.html" target="mainFrame">&lt;classPathEntry&gt;</a><br/>
   &nbsp;&nbsp;<a href="configreference/columnOverride.html" target="mainFrame">&lt;columnOverride&gt;</a><br/>
+  &nbsp;&nbsp;<a href="configreference/columnRenamingRule.html" target="mainFrame">&lt;columnRenamingRule&gt;</a><br/>
   &nbsp;&nbsp;<a href="configreference/daoGenerator.html" target="mainFrame">&lt;daoGenerator&gt;</a><br/>
   &nbsp;&nbsp;<a href="configreference/generatedKey.html" target="mainFrame">&lt;generatedKey&gt;</a><br/>
   &nbsp;&nbsp;<a href="configreference/ignoreColumn.html" target="mainFrame">&lt;ignoreColumn&gt;</a><br/>
