@@ -66,6 +66,11 @@
   <li>Fixed bug - incorrect datatype mapping for JDBC BIT datatype</li>
   <li>Made the generated Example and Criteria classes extendable</li>
   <li>Made the legacy DAOs extendable</li>
+  <li>Added the ability to provide a renaming rule for columns.  This is for the 
+      use case where columns have a common prefix that should be removed before
+      calculating the property name.  See the
+      <a href="configreference/columnRenamingRule.html">&lt;columnRenamingRule&gt;</a>
+      reference page for more information</li>
 </ul>
 
 <h2>Version 1.0.0</h2>
