@@ -12,6 +12,7 @@ ValidationError.10=JdbcConnectionConfiguration is required
 ValidationError.11=At least one AbatorConfiguration element is required
 ValidationError.12={0} Target Package is Required for context {1}
 ValidationError.13=If "useColumnIndexes" property is set, then either both or neither query id must be set for table {0}
+ValidationError.14="searchString is required in a ColumnRenamingRule"
 
 RuntimeError.0=configfile is a required parameter
 RuntimeError.1=configfile {0} does not exist
