@@ -39,6 +39,7 @@ Enhancements -
 14. Added updateByExample generated method
 15. Java2 is now the default generator set
 16. IBATIS-470 - make legacy DAOs extendable
+17. IBATIS-468 - add <columnRenamingRule>
 
 -------------------------------------------------------------------------------
 Version 1.0.0:
